Remove DailyCountEmailGenerator and related classes; refactor MessageCountEmailGenerator to include deviation calculations for message counts. Update EmailTask to utilize new MessageCountEmailContents structure for sending daily count emails.